--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="cssfiles/styles.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
+
 </head>
 
 <body>
@@ -38,7 +39,7 @@
                             Contact</a></li>
                 </ul>
                 <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
+                    <a role="button" id="myLogin">
                         <span class="fa fa-sign-in"></span> Login</a>
                 </span>
 
@@ -47,15 +48,14 @@
         </div>
 
     </nav>
-    <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
+    <div class="modal fade" id="loginModal" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
-                <div class="modal-header">
+                <div class="modal-header mymodal-header">
                     <h4 class="modal-title">Login </h4>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <button type="button " class="close mybtn" data-dismiss="modal">&times;</button>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body mymodal-body">
                     <form>
                         <div class="form-row">
                             <div class="form-group col-sm-4">
@@ -101,19 +101,17 @@
                     <img src="images/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
-                    <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="modal"
-                        data-target="#exampleModal">Reserve Table</a>
-                    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
-                        aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <a role="button" class="btn btn-block nav-link btn-warning" id="myBtn">Reserve Table</a>
+                    <div class="modal fade" id="myModal" role="dialog">
                         <div class="modal-dialog modal-lg">
                             <div class="modal-content">
-                                <div class="modal-header text-dark">
+                                <div class="modal-header mymodal-header">
                                     <h5 class="modal-title" id="exampleModalLabel">Reserve a Table</h5>
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
                                 </div>
-                                <div class="modal-body text-dark">
+                                <div class="modal-body mymodal-body text-dark">
 
                                     <form>
                                         <div class="form-group row">
@@ -262,14 +260,9 @@
                         <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                             <span class="carousel-control-next-icon"></span>
                         </a>
-                        <div class="btn-group" id="carouselButton">
-                            <button class="btn btn-danger btn-sm" id="carousel-pause">
-                                <span class="fa fa-pause"></span>
-                            </button>
-                            <button class="btn btn-danger btn-sm" id="carousel-play">
-                                <span class="fa fa-play"></span>
-                            </button>
-                        </div>
+                        <button class="btn btn-danger btn-sm" id="carouselButton">
+                            <span id="carousel-button-icon" class="fa fa-pause"></span>
+                        </button>
 
                     </div>
                 </div>
@@ -400,16 +393,35 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script>
         $(document).ready(function () {
-            $("#mycarousel").carousel({ interval: 2000 });
-            $("#carousel-pause").click(function () {
-                $("#mycarousel").carousel('pause');
+            $("#mycarousel").carousel({ interval: 1000 });
+            $("#carouselButton").click(function () {
+                if ($("#carouselButton").children("span").hasClass('fa-pause')) {
+                    $("#mycarousel").carousel('pause');
+                    $("#carouselButton").children("span").removeClass('fa-pause');
+                    $("#carouselButton").children("span").addClass('fa-play');
+                }
+                else if ($("#carouselButton").children("span").hasClass('fa-play')) {
+                    $("#mycarousel").carousel('cycle');
+                    $("#carouselButton").children("span").removeClass('fa-play');
+                    $("#carouselButton").children("span").addClass('fa-pause');
+                }
             });
-            $("#carousel-play").click(function () {
-                $("#mycarousel").carousel('cycle');
+            $(document).ready(function () {
+                $("#myBtn").click(function () {
+                    $("#myModal").modal("toggle");
+                });
             });
-        })
+            $(document).ready(function () {
+                $("#myLogin").click(function () {
+                    $("#loginModal").modal("toggle");
+                });
+            });
+        });
     </script>
 
 </body>
 
 </html>
+
+
+
